tests/success/testcaseSucessoAritimetica.g
int resultado, x, y;

programa {
    x = 100;
    y = 5;
    resultado = (x / 5) + (y * 2); /* resultado deve ser 30 */
    escreva "O resultado da expressao e: ";
    escreva resultado;
    novalinha;
}