tests/error/testcaseErrorNODE_FUNCCALL.g
int soma(int a, int b) {
    retorne a+b;
}

int x;

programa {
    x = 10;

    escreva soma(5, x);
    novalinha;

    escreva soma(5); 

    escreva x(5, 10);
}